packages/button/src/scss/_component.scss
@use "@uqds/core/src/scss/global" as core;
@use "@uqds/icon/src/scss/global" as icon;
@use "global" as *;

.uq-button {
  background-color: core.$purple-500;
  border: 2px solid core.$purple-500;
  border-radius: core.$space-xs;
  box-sizing: border-box;
  color: core.$white;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  gap: core.$space-s;
  font-family: core.$roboto;
  font-size: core.$font-size-m;
  font-weight: core.$font-weight-medium;
  line-height: core.$line-height-ui;
  padding: core.$space-m core.$space-l;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition:
    background-color 200ms ease-out,
    color 200ms ease-out,
    border 200ms ease-out;

  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  & .uq-icon {
    width: 24px;
    height: 24px;
    margin-block: -4px !important;

    &::before {
      width: 24px;
      height: 24px;
      margin: 0;
      filter: icon.$icon-light-filter;
    }
  }

  &:hover {
    background-color: core.$white;
    border-color: core.$purple-500;
    color: core.$purple-500;
    text-decoration: underline;

    & .uq-icon::before {
      filter: icon.$icon-primary-filter;
    }
  }
}

.uq-button--secondary {
  background-color: core.$white;
  border-color: core.$purple-500;
  color: core.$purple-500;

  &:hover,
  &:focus {
    background-color: core.$purple-500;
    border-color: core.$purple-500;
    color: core.$white;
  }
}

.uq-button--tertiary {
  background-color: core.$white;
  border-color: core.$white;
  color: core.$purple-500;
  text-decoration: underline;

  &:hover,
  &:focus {
    background-color: core.$purple-500;
    border-color: core.$purple-500;
    color: core.$white;
  }
}

.uq-button--secondary,
.uq-button--tertiary {
  & .uq-icon::before {
    filter: icon.$icon-primary-filter;
  }

  &:hover,
  &:focus {
    background-color: core.$purple-500;
    border-color: core.$purple-500;
    color: core.$white;

    & .uq-icon::before {
      filter: icon.$icon-light-filter;
    }
  }
}

.uq-button--tiny {
  font-size: core.$font-size-xs;
  padding: core.$space-xs core.$space-s;
}

.uq-button--small {
  font-size: core.$font-size-s;
  padding: core.$space-s core.$space-m;
}

.uq-button--large {
  font-size: core.$font-size-l;
  padding: core.$space-m core.$space-xxl;
}

.uq-button--expand {
  padding-left: core.$space-s;
  padding-right: core.$space-s;
  width: 100%;
  justify-content: center;
}

